Missed a host in the sample config.

--- a/pso_dns.conf.sample
+++ b/pso_dns.conf.sample
@@ -12,3 +12,4 @@ gc01.st-pso.games.sega.net 67.222.144.120
 pso-gc1.pso.playsega.com 67.222.144.120
 pso-gct01.sonic.isao.net 67.222.144.120
 pso-kr06.sonic.isao.net 67.222.144.120
+pso-gc01.sonic.isao.net 67.222.144.120
